<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inserir_produto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.pandaria.View.InserirProduto"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_lblNomeProduto"
            android:id="@+id/lblNomeProduto"
            android:textStyle="bold"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNomeProduto"
            android:hint="@string/hint_txtNomeProduto" />
    </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/string_lblPrecoProduto"
                android:id="@+id/lblPrecoProduto"
                android:textSize="25sp"
                android:textStyle="bold" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPrecoProduto"
                android:hint="@string/hint_txtPrecoProduto" />

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_lblListaIngrediente"
            android:id="@+id/lblIngredientes"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:id="@+id/lstIngrediente"
            android:scrollbars="vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_lblListaEmbalagem"
            android:id="@+id/lblEmbalagem"
            android:textSize="25sp"
            android:textStyle="bold" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:id="@+id/lstEmbalagemTelaProdutos"
            android:scrollbars="vertical"/>




    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_lblCustoProduto"
            android:id="@+id/lblCustoProduto"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_lblCustoProduto"
            android:id="@+id/lblCustoCalculado"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="40dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnIncluir"
        android:text="@string/string_btnIncluirIngre"
        android:background="#08ad9d"
        android:textColor="@color/abc_background_cache_hint_selector_material_light"/>

</RelativeLayout>
